# rust-endpoint-agent-2025

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bootstrap.sh  deny.toml
.about/: about.hjson
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: config.rs  lib.rs  logging.rs  main.rs
agent/src/collectors/: cpu.rs  disk.rs  mem.rs  mod.rs  net.rs  os.rs  proc.rs  win_eventlog.rs
agent/src/service/: install.rs  mod.rs  uninstall.rs
agent/src/transport/: client.rs  mod.rs  mtls.rs  queue.rs
configs/: agent.example.toml  server.example.toml
dev/: demo-run.sh  record-demo.sh  verify.sh
docs/: demo.cast
server/: Cargo.toml
server/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
