[workspace]
members = ["agent", "server", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Rust Endpoint Agent maintainers"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
sysinfo = { version = "0.30", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "macros", "serde-human-readable"] }
directories = "5.0"
rand = "0.9"
zstd = "0.13"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "time", "sync", "net"] }
notify = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.6"
hyper = { version = "1.4", features = ["http1", "server", "client"] }
http = "1.1"
hyper-util = { version = "0.1", features = ["client", "server", "http1", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","gzip","json","http2","zstd"] }
prometheus = "0.13"
proptest = "1.5"

# exposed for agent/Cargo.toml (uses `workspace = true`)
windows-service = "0.6"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Services",
  "Win32_System_EventLog"
] }
