[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local HTTPS test receiver for the Rust Endpoint Agent."
[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }
bytes = { workspace = true }
